# clip_forge

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
clipforge/: __init__.py  cli.py  engine.py  ffutil.py  manifest.py  models.py
clipforge/analyzers/: silence.py  transcribe.py
clipforge/editors/: captions.py  cut.py
clipforge/web/: __init__.py  routes.py
clipforge/web/static/: app.js  style.css
clipforge/web/templates/: index.html
scripts/: generate_test_video.py
tests/: conftest.py  test_engine.py  test_ffutil.py  test_manifest.py  test_silence.py  test_web.py
tests/fixtures/: sample_manifest.json
